# HR_HR

./: .env.example  .gitattributes  .gitignore  BACKPORT_TO_V1.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  _tmp_pdf_test.mjs  e2e_api_excel.py  e2e_c1_c4_coverage.py  e2e_data_quality.py  e2e_final_verification.py  e2e_other_tabs.py  e2e_plan_coverage.py  e2e_post_deploy.py  e2e_print_verify.py  e2e_real_verify.py  e2e_report_insight.py  e2e_report_jobbox.py  e2e_report_survey.py  e2e_run.py  e2e_security.py  e2e_visual_verify.py  gen_survey_pdf.py  package-lock.json  package.json  playwright.config.ts  playwright.vrt.config.ts  render.yaml
.claude/: settings.json
.playwright-mcp/: indeed-2026-05-12.csv
assets/: knowledge_bundle.json  ng_context_exclusions.json  ng_words.json
claudedocs/: AUTONOMOUS_SESSION_REVIEW_2026-07-20.md  CONSULT_2LAYER_GOLD_STANDARD_v4.md  CONSULT_2LAYER_REVIEW_INSTRUCTION_2026-07-15.md  QA_INFRASTRUCTURE_ROADMAP_2026-07-06.md  review_guidelines.md
data/: wage_census_to_occupation_middle_map.json
docs/: 5EXPERT_REVIEW_REPORT.md  CLAUDE.md  CONSULT_SUPPORT_PLAN_2026-07-10.md  DATA_CATALOG.md  E2E_COVERAGE_MATRIX.md  E2E_OPERATION_NOTES.md  E2E_REGRESSION_GUIDE.md  E2E_RESULTS_LATEST.md  HANDOFF_COMPETITIVE_EXTERNAL_PANELS.md  IMPLEMENTATION_PLAN_V2.md  IMPROVEMENT_ROADMAP_V2.md  JOBGEN_INTEGRATION_2026-07-25.md  MANUAL_E2E_2026-04-26.md  MARKET_INTELLIGENCE_PRINT_PDF_P1_SPEC.md  MARKET_INTELLIGENCE_UI_IMPROVEMENT_PLAN.md  MARKET_INTELLIGENCE_UI_P1_P2_BACKLOG.md  MASTER_PUNCH_LIST_2026_05_31.md  MEDIA_REPORT_DATA_REFRESH_RUNBOOK_2026_05_11.md  MEDIA_REPORT_P0_FEASIBILITY_CHECK_2026_05_09.md  NAVY_SECTION_09_DESIGN.md  OPEN_DATA_MEDIA_REPORT_VALUE_AUDIT_2026_05_09.md  OPEN_DATA_UTILIZATION_TOTAL_AUDIT_2026_05_09.md  P2_5_P2_6_DESIGN_NOTES_2026_06_03.md  PDCA_2026_05_18_report_critical_fixes.md  PDF_BOTTOM_MARGIN_ROOT_CAUSE_INVESTIGATION.md  PDF_CHART_BUILDER_PATH_AUDIT_2026_05_08.md  PDF_CHART_DOM_AUDIT_2026_05_09.md  PDF_CHART_OPTION_RUNTIME_AUDIT_2026_05_08.md  PDF_CHART_OPTION_RUNTIME_DIFF_2026_05_09.md  PDF_CHART_RENDERING_AUDIT_2026_05_08.md  PDF_CHART_RENDERING_ROOT_CAUSE_2026_05_09.md  PDF_CHART_SELECTOR_MATCH_AUDIT_2026_05_09.md  PDF_CONTAINER_RENDER_AUDIT_2026_05_08.md  PDF_DATA_CONSISTENCY_AUDIT_2026_05_08.md  PDF_DATA_SOURCE_MIXING_AUDIT_2026_05_08.md  PDF_DEPLOY_BUILD_AUDIT_2026_05_08.md  PDF_LEGAL_EXPRESSION_AUDIT_2026_05_08.md  (+106 more)
scripts/: _tmp_phase1_verify.py  (+109 more)
(+424 files in other folders)
