[package]
name = "rust_dashboard"
version = "0.1.1"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "set-header"] }
http = "1"
tower-sessions = "0.14"

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Serialization
# preserve_order は jobgen 84列レスポンスの列順維持に必須 (2026-07-24 求人票生成統合)。
# HRHACKER_COLUMNS 順で Map に挿入 → そのまま UI の CSV 列順になる。
# 全域の JSON キー順が「辞書順→挿入順」に変わるため、統合時に全テストで回帰確認済み。
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Turso HTTP API (外部統計データ用)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Cache
dashmap = "6"

# Authentication
bcrypt = "0.16"
aes-gcm = "0.10"
base64 = "0.22"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression (gzip DB decompression on startup)
flate2 = "1"

# Time (セッション有効期限設定用)
time = "0.3"

# CSV parsing (survey upload)
csv = "1"

# 文字エンコーディング検出 (Excel 標準保存 Shift-JIS / UTF-16 BOM 対応)
# 2026-04-26 Fix-A: 媒体分析タブ CSV アップロードの BOM 検出 + SJIS フォールバック
encoding_rs = "0.8"

# Random (bootstrap statistics)
rand = "0.8"

# Multipart file upload
axum-extra = { version = "0.10", features = ["multipart"] }

# Excel export
rust_xlsxwriter = "0.80"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
sha2 = "0.10"

# キーワード需要ビューア (media_engine、2026-07-24 統合)
# 注: media_engine の cache_key はキー昇順ソート後に挿入するため、preserve_order の
# 有無に関わらず Python 版とキー互換 (昇順挿入 = 挿入順維持でも昇順)。
anyhow = "1"
unicode-normalization = "0.1"

# 求人票生成 (job_gen、2026-07-24 統合)
calamine = "0.26"
pdf-extract = { version = "0.7", optional = true }

[features]
default = ["pdf"]
pdf = ["dep:pdf-extract"]

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[lints.clippy]
# エラーにすべきもの（既存コード配慮のため段階的にwarnへ昇格予定）
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
# 推奨するpattern
redundant_clone = "warn"
needless_collect = "warn"
